--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
 <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
 
 <script type="text/javascript">
+var data = {
+  // A labels array that can contain any sort of values
+  labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri'],
+  // Our series array that contains series objects or in this case series data arrays
+  series: [
+    [5, 2, 4, 2, 0]
+  ]
+};
+
+// Create a new line chart object where as first parameter we pass in a selector
+// that is resolving to our chart container element. The Second parameter
+// is the actual data object.
+new Chartist.Line('.ct-chart', data);
+
 var breakLength;
 var workLength;
 var workLeft = get_Length("workTime");
@@ -154,6 +168,7 @@ input {
 </style>
 <html>
   <body>
+  <div class="ct-chart ct-perfect-fourth"></div>
   <div class="box">
   <div class="row" style="width:100%; margin:auto">
     <div class="toggle col-xs-6">
