--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
-<script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
 
+<html>
+  <head>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+    <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
+  </head>
+  <body>
+  <div class="ct-chart ct-perfect-fourth"></div>
+  
+</body>
+</html>
 <script type="text/javascript">
 var data = {
   // A labels array that can contain any sort of values
@@ -27,9 +35,3 @@ var data = {
 // is the actual data object.
 new Chartist.Line('.ct-chart', data);
 </script>
-<html>
-  <body>
-  <div class="ct-chart ct-perfect-fourth"></div>
-  
-</body>
-</html>
