--- a/index.html
+++ b/index.html
@@ -34,4 +34,119 @@ var data = {
 // that is resolving to our chart container element. The Second parameter
 // is the actual data object.
 new Chartist.Line('.ct-chart', data);
+
+var breakLength;
+var workLength;
+var workLeft = get_Length("workTime");
+var totalDisplay = 60;
+var timer;
+var isOn = false;
+var initialState = true;
+
+function get_Length(type) {
+  var arr = $("input[name='" + type + "']").val().split(":");
+  return Number(arr[0]);
+}
+
+function getData() {
+  var data = {
+    labels: ["Break","Work",getLabel()],
+    series: [get_Length("breakTime"), workLeft, totalDisplay - workLeft - get_Length("breakTime")]
+  }
+  return data;
+}
+function getLabel(){
+  var label;
+  if(initialState){label = "Click to start";}
+  else if(isOn){label = toTime(workLeft);}
+  else if(!isOn){label = "Click again to restart";}
+  return label;
+}
+var options = {
+  showLabel: true,
+  labelPosition: 'inside',
+  labelDirection: 'neutral',
+  donut: true
+}
+
+var myChart;
+
+window.onload = function() {
+  workLeft = get_Length("workTime");
+  myChart = new Chartist.Pie('.ct-chart', getData(), options).on('draw', (context) => {
+  if (context.type === 'label' && context.index==2) {
+    context.element.attr({
+      dx: context.element.root().width() / 2,
+      dy: context.element.root().height() / 2
+    });
+  }
+});
+}
+
+function init(){
+  if(initialState){initialState = false;}
+  timer = setInterval(updateTime, 1000);
+  if(!isOn){toggleOn();}
+  workLeft = get_Length("workTime");
+}
+
+function updateTime() {
+  var interval = 1000;
+  workLeft = workLeft - interval / (60 * 1000);
+  if (workLeft <= 0) {
+    clearInterval(timer);
+  }
+  try {
+    myChart.update(getData());
+  } catch (e) {
+    console.log("error");
+  }
+  if(workLeft <= 0){alert("Take a break!");}
+}
+
+$("button").click(function() {
+  var fieldName = $(this).attr("data-field");
+  var type = $(this).attr("data-type");
+  var input = $("input[name='" + fieldName + "']");
+  var amount = input.val().split(":");
+
+  if (type == "minus") {
+    amount[0] = Number(amount[0]) - 1;
+  } else if (type == "plus") {
+    amount[0] = Number(amount[0]) + 1;
+  }
+  var newVal = amount.join(":");
+  input.val(newVal);
+  
+  if(Number(amount[0]) <= 0){
+    $("button[data-type='minus'][data-field='" + fieldName + "']").prop('disabled', true); 
+  } else {
+    $("button[data-type='minus'][data-field='" + fieldName + "']").prop('disabled', false); 
+  }
+})
+$("#chartClick").click(function() {
+  if (isOn) {
+    clearInterval(timer);
+    toggleOn();
+  } else if(!isOn) {
+    init();
+  }
+  myChart.update(getData());
+})
+
+function toggleOn(){
+  isOn = !isOn;
+  if(isOn){
+    $(":button").prop('disabled', true); 
+  }
+  if(!isOn){
+    $(":button").prop('disabled', false); 
+  }
+}
+function toTime(value){
+  if(value < 0){value = 0;}
+  var seconds = Math.floor((value * 60)%60);
+  if(seconds < 10){seconds = "0" + seconds;}
+  return Math.floor(value) + ":" + seconds;
+}
 </script>
