--- a/index.html
+++ b/index.html
@@ -9,7 +9,30 @@
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-
+<style type="text/css">
+body {
+  margin-top:30px;
+  text-align:center;
+  background-color:#118C4E;
+}
+.box {
+  width: 40%;
+  margin: auto;
+  text-align: center;
+}
+.btn {
+  background-color: #585858;
+}
+input {
+  background-color: #C1E1A6;
+}
+.ct-labels, .ct-grids {
+  display: none;
+}
+.ct-label{
+  font-size:1.5em;
+}
+</style>
 <html>
   <head>
     <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
