--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@ body {
   margin-top:30px;
   text-align:center;
   background-color:#118C4E;
-  font-size: large;
 }
 .box {
   width: 40%;
@@ -28,9 +27,8 @@ input {
   background-color: #C1E1A6;
 }
 .ct-labels, .ct-grids {
-  display: none;
 }
-.ct-label{
+.ct-labels{
   font-size:15px;
 }
 </style>
