--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@ input {
 .ct-labels, .ct-grids {
 }
 .ct-label{
-  font-size:15px;
+  font-size:5em;
 }
-$ct-text-size = 15px;
 </style>
 <html>
   <head>
