--- a/index.html
+++ b/index.html
@@ -187,3 +187,8 @@ function toTime(value){
   return Math.floor(value) + ":" + seconds;
 }
 </script>
+<style type="text/css">
+.ct-label{
+  font-size:2rem;
+}
+</stlye>
