--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ input{
     <div class="toggle col-xs-6">
       <span>
       <button type="button" class="btn btn-default" data-type="minus" data-field="workTime">
-        <span class="glyphicon glyphicon-minus"></span>
+        <i class="glyphicon glyphicon-minus"></i>
       </button>
       <input type="text" name="workTime" value="25:00" disabled style="width:40%" min="0" max="15">
       <button type="button" class="btn btn-default" data-type="plus" data-field="workTime">
