--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@ input{
   width:60%;
 }
 .glyphicon {
+  position:absolute;
   left: 50%;
-  transform: translate(-50%);
-  margin:auto;
+  transform: translate(-50%, -50%);
 }
 </style>
 <html>
