--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ input{
   width:60%;
 }
 .glyphicon {
-  position:absolute;
+  position:relative;
   left: 50%;
   transform: translate(-50%, -50%);
 }
