--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@ input{
   width:60%;
 }
 .glyphicon {
+  top: 50%;
   left: 50%;
-  transform: translate(-50%);
+  transform: translate(-50%, -50%);
 }
 </style>
 <html>
