--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ body {
 }
 .btn {
   background-color: #585858;
+  max-width:20%;
 }
 input {
   background-color: #C1E1A6;
@@ -31,15 +32,12 @@ input {
 .ct-label{
   font-size:2rem;
 }
-.btn {
-  width:20%;
-}
 input{
   width:60%;
 }
 .glyphicon {
   left: 50%;
-  transform: translate(-100%);
+  transform: translate(-50%);
 }
 </style>
 <html>
