--- a/index.html
+++ b/index.html
@@ -26,14 +26,12 @@ body {
 }
 input {
   background-color: #C1E1A6;
+  max-width:60%;
 }
 .ct-labels, .ct-grids {
 }
 .ct-label{
   font-size:2rem;
-}
-input{
-  width:60%;
 }
 .glyphicon {
   left: 50%;
