--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@ body {
   background-color:#118C4E;
 }
 .toggle{
-  display: flex;
-  flex-direction:row;
-  justify-content: center;
+  display: inline-block;
 }
 .box {
   width: 40%;
